# rag

./: .gitignore  app.log.2025-02-08  app.py  documents.db  pyproject.toml  req.api  settings.py
models/: crud.py  database.py  schema.py  serializers.py
services/: embeddings.py  retrieval.py  text_processing.py
utils/: helpers.py  logging.py  setup.py
