[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chonkie[all]>=0.4.1",
    "faiss-cpu>=1.10.0",
    "flask>=3.1.0",
    "flask-cors>=5.0.0",
    "networkx>=3.4.2",
    "nltk>=3.9.1",
    "pypdf>=5.2.0",
    "rank-bm25>=0.2.2",
    "requests>=2.32.3",
    "ruff>=0.9.6",
    "sentence-transformers>=3.4.1",
    "sqlalchemy>=2.0.37",
]
